--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -6,6 +6,25 @@
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
+  <style>
+    .timer {
+      display: flex;
+      gap: 10px;
+    }
+    .field {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+    }
+    .value {
+      font-size: 50px;
+    }
+    .label {
+      font-size: 15px;
+      margin-top: -20px;
+      text-transform: uppercase;
+    }
+  </style>
   <body>
     <p><a href="index.html">Go back</a></p>
 
